fix: fix tooltip for delete button

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -40,7 +40,8 @@
       "download": "Download",
       "edit": "Edit",
       "hide": "Hide",
-      "show": "Show"
+      "show": "Show",
+      "delete": "Delete"
     }
   },
   "feed": "Feed",
