feat(Multivariate dialog): 21214 simplified multivariate analysis dialog (#1018)
* feat(21214): Show static Multivariate Analysis dialog

* feat(MVA): basic Analysis creation (all layers go to Score)

* feat: delete and edit MCDA layer functionality (Score)

* fix: improve score on desktop

* feat: add Download button for Multivariate analysis layers

* fix: fix circular dependency

* feat: add and refactor editing and deleted layers; add changing the dimension

* fix: fix dimension dropdown; rename "base" to "compare"

* fix: wider layer items in dialog

* feat: add Edit button to Layers panel. Implement proper editing in MultivariateAnalysisForm

* chore: don't include empty base dimension in custom config

* fix: fix no key warning

* chore: rename type

* chore: refactor some parameters in MultivariateDimensionsLayers

* refactor: rename MultivariateAnalysisForm files

* refactor: add constraints on dimensionKey in MultivariateAnalysisForm

* feat: change default bivariate color scheme for Multivariate layers

* fix: fix dimension dropdown being cut on the border

* fix: fix showing Base instead of Compare in layer editor

* chore: update labels on bivariate legend

* fix: fix scroll in multivariate dialog

* fix: use better bivariate colors

* feat: don't override colors in Edit mode by default

* feat: add "Keep Colors" checkbox

* fix: fix logic of "Keep colors" checkbox

* chore: self-closing tag for checkbox

* fix: revert

* feat: name MCDAs in custom after their content if they only have one layer

* feat: apply axis steps for MCDA dimensions with single layer

* feat: add Multivariate Legend preview

* feat: add support for custom step overrides

* chore: change delete button icon

* feat: move Delete button inside MCDALayerParameters

* fix: hide 0 in place of custom steps checkbox

* fix showing delete button

* feat: make analysis name optional

* fix: scroll back to bottom of the dialog after enabling custom steps

* fix: better align add layers butt

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -10,6 +10,7 @@
   "create": "Create",
   "disasters": "Disasters",
   "loading": "Loading...",
+  "preparing_data": "Preparing data",
   "loading_events": "Loading disasters",
   "legend": "Legend",
   "maps": "maps",
@@ -39,7 +40,8 @@
       "download": "Download",
       "edit": "Edit",
       "hide": "Hide",
-      "show": "Show"
+      "show": "Show",
+      "delete": "Delete"
     }
   },
   "feed": "Feed",
@@ -102,10 +104,8 @@
     "modal_input_indicators": "Layer list",
     "modal_input_indicators_placeholder": "Select layers",
     "modal_input_indicators_no_options": "No options",
-    "btn_cancel": "Cancel",
     "btn_save": "Save analysis",
     "error_analysis_name_cannot_be_empty": "Analysis name cannot be empty",
-    "error_bad_layer_data": "Invalid MCDA layer data",
     "error_invalid_file": "Invalid MCDA file format",
     "error_invalid_parameter": "Invalid '{{parameter}}' parameter",
     "error_invalid_layer_parameter": "Invalid '{{parameter}}' parameter in '{{axisName}}' layer",
@@ -163,11 +163,15 @@
     "good": "Good"
   },
   "multivariate": {
+    "multivariate_analysis": "Multivariate Analysis",
+    "create_analysis_layer": "Create analysis layer",
     "upload_analysis_layer": "Upload analysis layer",
     "popup": {
       "score_header": "Score {{level}}",
-      "base_header": "Base {{level}}"
-    }
+      "compare_header": "Compare {{level}}"
+    },
+    "score": "Score",
+    "compare": "Compare"
   },
   "search": {
     "search_location": "Search location",
