20509 fe integrate disasters panel as UniLayout system (#1021)
* UniLayout system

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -49,6 +49,9 @@
   "spinner_text": "Gathering data",
   "updated": "Updated",
   "started": "Started",
+  "created": "Created",
+  "mapping_types": "Mapping types",
+  "osm_gaps": "OSM gaps",
   "no_data_received": "No data received",
   "wrong_data_received": "Wrong data received",
   "error": "Error",
