--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -174,7 +174,8 @@
       "compare_header": "Compare {{level}}"
     },
     "score": "Score",
-    "compare": "Compare"
+    "compare": "Compare",
+    "hide_area": "Hide area"
   },
   "search": {
     "search_location": "Search location",
