feat(multivariate): 21207 recover Extrusion dimension functionality

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -176,7 +176,8 @@
     "score": "Score",
     "compare": "Compare",
     "hide_area": "Hide area",
-    "labels": "Labels"
+    "labels": "Labels",
+    "3d": "3D"
   },
   "search": {
     "search_location": "Search location",
