--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -18,6 +18,7 @@
   "horizontal_direction": "Horizontal direction",
   "legend_presentation": "Legend presentation",
   "layers": "Layers",
+  "layer": "Layer",
   "toolbar": {
     "map_ruler": "Measure distance",
     "locate_me": "Locate me",
@@ -177,6 +178,12 @@
     "compare": "Compare",
     "hide_area": "Hide area",
     "labels": "Labels"
+  },
+  "map_popup": {
+    "value": "value",
+    "range": "Range",
+    "coefficient": "Coefficient",
+    "normalized_value": "Normalized value"
   },
   "search": {
     "search_location": "Search location",
