--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -180,7 +180,7 @@
     "labels": "Labels"
   },
   "map_popup": {
-    "value": "value",
+    "value": "Value",
     "range": "Range",
     "coefficient": "Coefficient",
     "normalized_value": "Normalized value"
