feat(popup): 21712 show "Normalized value" in hex popups for normalized/transformed layers (#1066)
* feat(21712): show "Normalized value" in hex popups for normalized/transformed layers

* fix: typo

* refactor labels generation for PopupMCDA

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -18,6 +18,7 @@
   "horizontal_direction": "Horizontal direction",
   "legend_presentation": "Legend presentation",
   "layers": "Layers",
+  "layer": "Layer",
   "toolbar": {
     "map_ruler": "Measure distance",
     "locate_me": "Locate me",
@@ -178,6 +179,12 @@
     "hide_area": "Hide area",
     "labels": "Labels",
     "3d": "3D"
+  },
+  "map_popup": {
+    "value": "Value",
+    "range": "Range",
+    "coefficient": "Coefficient",
+    "normalized_value": "Normalized value"
   },
   "search": {
     "search_location": "Search location",
