--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -280,8 +280,7 @@
     "finish_drawing": "Finish Drawing",
     "caption": "Click on the map to begin drawing",
     "no_geometry_error": "No drawn geometry to download",
-    "overlap_error": "Polygon should not overlap itself",
-    "save_features": "Save features"
+    "overlap_error": "Polygon should not overlap itself"
   },
   "boundary_selector": {
     "title": "Focus to administrative boundary"
