feat(user layers): 21025 recover create layer user flow (#1049)
* feat(21025): recover create layer user flow

* feat(21025): fix comments

* fix: 21751 apply line color instead of fill color to custom user layers

* fix: 21753 Add filters to Symbol and Fill layers in custom user layers

* refactor: use LayerSpecificationWithoutId type

* chore: add comments

* test: update unit test snapshot

* refactor: move custom layers API requests into the feature folder

* chore: remove unused SafeCallbacks interface

* feat: remove "Save features" button from EditFeaturePanel

* refactor: remove unused finishButtonText property from DrawToolBoxSettings

* refactor: remove unused onFinishDrawing

* fix: fix edit Features panel staying after features are saved

* chore: add todo comment

* refactor: remove unused save action

* chore: replace hardcoded literal with a constant

---------

Co-authored-by: Natallia Harshunova <nattallius@gmail.com>
Co-authored-by: Aliaksandr Baranau <abaranau.dev@gmail.com>

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -227,6 +227,7 @@
     "open_timeline_button": "Timeline"
   },
   "create_layer": {
+    "save_and_draw": "Save and draw",
     "edit_layer": "Edit Layer",
     "edit_features": "Edit Features",
     "delete_layer": "Delete Layer",
@@ -279,8 +280,7 @@
     "finish_drawing": "Finish Drawing",
     "caption": "Click on the map to begin drawing",
     "no_geometry_error": "No drawn geometry to download",
-    "overlap_error": "Polygon should not overlap itself",
-    "save_features": "Save features"
+    "overlap_error": "Polygon should not overlap itself"
   },
   "boundary_selector": {
     "title": "Focus to administrative boundary"
