--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -513,7 +513,8 @@
     "chooseFeature": "Choose layer feature",
     "listInfo": "The list is filtered by selected area and sorted by project number",
     "error_loading": "Failed to load layer features data. Please try again.",
-    "no_features": "No features found in the selected area."
+    "no_features": "No features found in the selected area.",
+    "priority": "{{level}} priority"
   },
   "reference_area": {
     "save_as_reference_area": "Save as reference area",
