--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -469,7 +469,8 @@
       "de": "German",
       "be": "Belarusian",
       "ru": "Russian",
-      "uk": "Ukrainian"
+      "uk": "Ukrainian",
+      "pl": "Polish"
     },
     "reference_area": {
       "title": "Reference area",
