--- a/src/core/localization/gettext/pl/common.po
+++ b/src/core/localization/gettext/pl/common.po
@@ -1457,7 +1457,7 @@ msgstr ""
 
 #: profile##languageOption##pl
 msgid "Polish"
-msgstr ""
+msgstr "Polski"
 
 #: profile##languageOption##uk
 msgid "Ukrainian"
