--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -469,6 +469,7 @@
       "de": "German",
       "be": "Belarusian",
       "ru": "Russian",
+      "pl": "Polish",
       "uk": "Ukrainian"
     },
     "reference_area": {
