--- a/src/core/localization/gettext/es/common.po
+++ b/src/core/localization/gettext/es/common.po
@@ -1556,6 +1556,10 @@ msgstr ""
 msgid "Russian"
 msgstr ""
 
+#: profile##languageOption##pl
+msgid "Polish"
+msgstr "Polaco"
+
 #: profile##languageOption##uk
 msgid "Ukrainian"
 msgstr "Ucranio"
