--- a/src/core/localization/gettext/pl/common.po
+++ b/src/core/localization/gettext/pl/common.po
@@ -4,7 +4,7 @@ msgstr ""
 "mime-version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2)\n"
 
 #: km
 msgid "km"
