feat(toolbar): 12700 add zoom buttons

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -22,6 +22,8 @@
   "toolbar": {
     "map_ruler": "Measure distance",
     "locate_me": "Locate me",
+    "zoom_in": "Zoom in",
+    "zoom_out": "Zoom out",
     "panel_title": "Toolbar",
     "download": "Download",
     "delete": "Delete",
