feat(analytics): export panel data to csv

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -250,7 +250,8 @@
   "analytics_panel": {
     "header_title": "Analytics",
     "error_loading": "Failed receiving data about selected area. It may be too large.",
-    "info_short": "Calculations are made for selected area"
+    "info_short": "Calculations are made for selected area",
+    "download_csv": "Download CSV"
   },
   "advanced_analytics_panel": {
     "header_title": "Advanced analytics",
