feat: rework MultivariateLegend to include all present dimensions

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -178,6 +178,7 @@
     },
     "score": "Score",
     "compare": "Compare",
+    "score_and_compare": "Score and compare",
     "hide_area": "Hide area",
     "labels": "Labels",
     "3d": "3D"
