--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -181,7 +181,8 @@
     "score_and_compare": "Score and compare",
     "hide_area": "Hide area",
     "labels": "Labels",
-    "3d": "3D"
+    "3d": "3D",
+    "static_opacity": "Static opacity"
   },
   "map_popup": {
     "value": "Value",
