add translations to Chinese

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -470,7 +470,8 @@
       "de": "German",
       "be": "Belarusian",
       "ru": "Russian",
-      "uk": "Ukrainian"
+      "uk": "Ukrainian",
+      "zn": "Chinese"
     },
     "reference_area": {
       "title": "Reference area",
