--- a/src/core/localization/gettext/zn/common.po
+++ b/src/core/localization/gettext/zn/common.po
@@ -30,7 +30,7 @@ msgstr "登出"
 msgid "Save"
 msgstr "保存"
 
-#: cancel mcda##btn_cancel
+#: cancel
 msgid "Cancel"
 msgstr "取消"
 
@@ -49,6 +49,10 @@ msgstr "灾害"
 #: loading
 msgid "Loading..."
 msgstr "加载中..."
+
+#: preparing_data
+msgid "Preparing data"
+msgstr "准备数据中"
 
 #: loading_events
 msgid "Loading disasters"
@@ -78,6 +82,10 @@ msgstr "图例显示方式"
 msgid "Layers"
 msgstr "图层"
 
+#: layer
+msgid "Layer"
+msgstr "图层"
+
 #: toolbar##map_ruler
 msgid "Measure distance"
 msgstr "测量距离"
@@ -94,7 +102,7 @@ msgstr "工具栏"
 msgid "Download"
 msgstr "下载"
 
-#: toolbar##delete
+#: toolbar##delete layer_actions##tooltips##delete
 msgid "Delete"
 msgstr "删除"
 
@@ -169,6 +177,14 @@ msgstr "已更新"
 #: started
 msgid "Started"
 msgstr "已开始"
+
+#: created
+msgid "Created"
+msgstr "已创建"
+
+#: osm_gaps
+msgid "OSM gaps"
+msgstr "OSM 缺口"
 
 #: no_data_received
 msgid "No data received"
@@ -324,6 +340,16 @@ msgstr "多标准决策分析"
 msgid "Create MCDA"
 msgstr "创建 MCDA"
 
+#: mcda##create_mcda_hint
+#, fuzzy
+msgid "Create multi-criteria decision analysis"
+msgstr "多标准决策分析"
+
+#: mcda##upload_mcda_hint
+#, fuzzy
+msgid "Upload multi-criteria decision analysis"
+msgstr "多标准决策分析"
+
 #: mcda##modal_input_name
 msgid "Analysis name"
 msgstr "分析名称"
@@ -351,11 +377,6 @@ msgstr "保存分析"
 #: mcda##error_analysis_name_cannot_be_empty
 msgid "Analysis name cannot be empty"
 msgstr "分析名称不能为空"
-
-#: mcda##error_bad_layer_data
-#, fuzzy
-msgid "Invalid MCDA layer data"
-msgstr "无效的 MCDA 文件格式"
 
 #: mcda##error_invalid_file
 msgid "Invalid MCDA file format"
@@ -558,6 +579,14 @@ msgstr "坏"
 msgid "Good"
 msgstr "好"
 
+#: multivariate##multivariate_analysis
+msgid "Multivariate Analysis"
+msgstr "多变量分析"
+
+#: multivariate##create_analysis_layer
+msgid "Create analysis layer"
+msgstr "创建分析图层"
+
 #: multivariate##upload_analysis_layer
 msgid "Upload analysis layer"
 msgstr "上传分析图层"
@@ -566,10 +595,46 @@ msgstr "上传分析图层"
 msgid "Score {{level}}"
 msgstr "评分 {{level}}"
 
-#: multivariate##popup##base_header
+#: multivariate##popup##compare_header
 #, fuzzy
-msgid "Base {{level}}"
-msgstr "比较 {{level}}"
+msgid "Compare {{level}}"
+msgstr "评分 {{level}}"
+
+#: multivariate##score
+msgid "Score"
+msgstr "评分"
+
+#: multivariate##compare
+msgid "Compare"
+msgstr "比较"
+
+#: multivariate##hide_area
+msgid "Hide area"
+msgstr "隐藏区域"
+
+#: multivariate##labels
+msgid "Labels"
+msgstr "标签"
+
+#: multivariate##3d
+msgid "3D"
+msgstr "3D"
+
+#: map_popup##value
+msgid "Value"
+msgstr "数值"
+
+#: map_popup##range
+msgid "Range"
+msgstr "范围"
+
+#: map_popup##coefficient
+msgid "Coefficient"
+msgstr "系数"
+
+#: map_popup##normalized_value
+msgid "Normalized value"
+msgstr "归一化值"
 
 #: search##search_location
 msgid "Search location"
@@ -696,6 +761,10 @@ msgstr "极端"
 #: event_list##open_timeline_button episode
 msgid "Timeline"
 msgstr "时间线"
+
+#: create_layer##save_and_draw
+msgid "Save and draw"
+msgstr "保存并绘制"
 
 #: create_layer##edit_layer
 msgid "Edit Layer"
@@ -865,11 +934,6 @@ msgstr "没有可下载的绘图几何体"
 #: draw_tools##overlap_error
 msgid "Polygon should not overlap itself"
 msgstr "多边形不应自重叠"
-
-#: draw_tools##save_features
-#, fuzzy
-msgid "Save features"
-msgstr "保存更改"
 
 #: boundary_selector##title
 msgid "Focus to administrative boundary"
@@ -1221,88 +1285,13 @@ msgstr "条款"
 msgid "User guide"
 msgstr "用户指南"
 
-#: about##title
-msgid "Welcome to Disaster Ninja!"
-msgstr ""
+#: modes##external##upload_imagery
+msgid "Upload imagery"
+msgstr "上传图像"
 
-#: about##intro
-msgid ""
-"Do you want to be notified about ongoing disasters? Are you interested in "
-"instant population data and other analytics for any region in the world? "
-"Disaster Ninja showcases some of <2>Kontur</2>’s capabilities in addressing "
-"these needs.<br/><br/>We initially designed it as a decision support tool "
-"for humanitarian mappers. Now it has grown in functionality and use cases. "
-"Whether you work in disaster management, build a smart city, or perform "
-"research on climate change, Disaster Ninja can help you to:"
-msgstr ""
-
-#: about##l1
-msgid "1. Stay up to date with the latest hazard events globally."
-msgstr ""
-
-#: about##p1
-msgid ""
-"The Disasters panel continually refreshes to inform you about ongoing "
-"events. It consumes data from the <2>Kontur Event Feed</2>, which you can "
-"also access via an API."
-msgstr ""
-
-#: about##l2
-msgid "2. Focus on your area of interest."
-msgstr ""
-
-#: about##p2
-msgid ""
-"The Drawing Tools panel allows you to draw or upload your own geometry on "
-"the map. You can also focus on a disaster-exposed area or an administrative "
-"unit — a country, city, or region."
-msgstr ""
-
-#: about##l3
-#, fuzzy
-msgid "3. Get analytics for the focused area."
-msgstr "所选区域没有分析"
-
-#: about##p3
-msgid ""
-"The Analytics panel shows the number of people living in that area per "
-"<2>Kontur Population</2> and estimated mapping gaps in OpenStreetMap. "
-"Kontur’s customers have access to hundreds of other indicators through "
-"Advanced Analytics."
-msgstr ""
-
-#: about##l4
-msgid "4. Explore data on the map and make conclusions."
-msgstr ""
-
-#: about##p4
-msgid ""
-"The Layers panel gives you various options to display two indicators "
-"simultaneously on a bivariate map, e.g., population density and distance to "
-"the nearest fire station. Use the color legend to assess which areas require "
-"attention. <br/>Hint: in general, green indicates low risk / few gaps, red — "
-"high risk / many gaps."
-msgstr ""
-
-#: about##p5
-msgid ""
-"In addition, you can switch to Reports in the left panel to access data on "
-"potential errors and inconsistencies in OpenStreetMap and help fix them by "
-"mapping the respective area with the JOSM editor."
-msgstr ""
-
-#: about##goToMap
-msgid "Go to the map now"
-msgstr ""
-
-#: about##p6
-msgid ""
-"We hope you find this tool valuable. Use the chatbox on Disaster Ninja for "
-"any questions about the functionality, and we will be happy to guide you. "
-"You can also contact us by email at <1>hello@kontur.io</1> if you have "
-"feedback or suggestions on improving the tool.<br/><br/>Disaster Ninja is an "
-"open-source project. Find the code in <8>Kontur’s GitHub account</8>."
-msgstr ""
+#: modes##external##imagery_catalog
+msgid "Imagery catalog"
+msgstr "图像目录"
 
 #: profile##interfaceTheme
 msgid "Theme"
@@ -1468,6 +1457,10 @@ msgstr "俄语"
 msgid "Ukrainian"
 msgstr "乌克兰语"
 
+#: profile##languageOption##zn
+msgid "Chinese"
+msgstr "中文"
+
 #: profile##reference_area##freehand_geometry
 msgid "Freehand geometry"
 msgstr "手绘几何"
@@ -1494,7 +1487,9 @@ msgstr "在地图上设置区域"
 #, fuzzy
 msgid ""
 "1.Select an area of interest on the map using the Admin Boundary or Draw "
-"Geometry tool. <br/> 2. Click the 'Save as Reference' button on the toolbar."
+"Geometry tool.\n"
+"\n"
+" 2. Click the 'Save as Reference' button on the toolbar."
 msgstr ""
 "1.使用“行政边界”或“绘图工具”在地图上选择感兴趣区域。\n"
 "\n"
@@ -1595,6 +1590,10 @@ msgstr "加载图层特征数据失败。请重试。"
 msgid "No features found in the selected area."
 msgstr "所选区域未发现特征。"
 
+#: layer_features_panel##priority
+msgid "{{level}} priority"
+msgstr ""
+
 #: reference_area##save_as_reference_area
 msgid "Save as reference area"
 msgstr "保存为参考区域"
@@ -1607,68 +1606,28 @@ msgstr "很遗憾，无法保存你的参考区域。请重试。"
 msgid "Selected area has been saved as reference area in your profile"
 msgstr "所选区域已保存为你个人资料中的参考区域"
 
-#~ msgid "Preparing data"
-#~ msgstr "准备数据中"
+#: oam_auth##login_button
+msgid "Login with Google"
+msgstr "使用 Google 登录"
 
-#~ msgid "Layer"
-#~ msgstr "图层"
+#, fuzzy
+#~ msgid "Invalid MCDA layer data"
+#~ msgstr "无效的 MCDA 文件格式"
 
-#~ msgid "Created"
-#~ msgstr "已创建"
+#, fuzzy
+#~ msgid "Base {{level}}"
+#~ msgstr "比较 {{level}}"
+
+#, fuzzy
+#~ msgid "Save features"
+#~ msgstr "保存更改"
+
+#, fuzzy
+#~ msgid "3. Get analytics for the focused area."
+#~ msgstr "所选区域没有分析"
 
 #~ msgid "Mapping types"
 #~ msgstr "制图类型"
 
-#~ msgid "OSM gaps"
-#~ msgstr "OSM 缺口"
-
-#~ msgid "Multivariate Analysis"
-#~ msgstr "多变量分析"
-
-#~ msgid "Create analysis layer"
-#~ msgstr "创建分析图层"
-
-#~ msgid "Score"
-#~ msgstr "评分"
-
-#~ msgid "Compare"
-#~ msgstr "比较"
-
-#~ msgid "Hide area"
-#~ msgstr "隐藏区域"
-
-#~ msgid "Labels"
-#~ msgstr "标签"
-
-#~ msgid "3D"
-#~ msgstr "3D"
-
-#~ msgid "Value"
-#~ msgstr "数值"
-
-#~ msgid "Range"
-#~ msgstr "范围"
-
-#~ msgid "Coefficient"
-#~ msgstr "系数"
-
-#~ msgid "Normalized value"
-#~ msgstr "归一化值"
-
-#~ msgid "Save and draw"
-#~ msgstr "保存并绘制"
-
-#~ msgid "Upload imagery"
-#~ msgstr "上传图像"
-
-#~ msgid "Imagery catalog"
-#~ msgstr "图像目录"
-
 #~ msgid "Polish"
 #~ msgstr "波兰语"
-
-#~ msgid "Chinese"
-#~ msgstr "中文"
-
-#~ msgid "Login with Google"
-#~ msgstr "使用 Google 登录"
