--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -471,7 +471,7 @@
       "be": "Belarusian",
       "ru": "Russian",
       "uk": "Ukrainian",
-      "zn": "Chinese"
+      "zh": "Chinese"
     },
     "reference_area": {
       "title": "Reference area",
