rename create and upload MCDA buttons in English

--- a/src/core/localization/gettext/de/common.po
+++ b/src/core/localization/gettext/de/common.po
@@ -151,8 +151,9 @@ msgid "Selected area"
 msgstr "Ausgewähltes Gebiet"
 
 #: toolbar##upload_mcda
-msgid "Upload MCDA"
-msgstr ""
+#, fuzzy
+msgid "Upload analysis"
+msgstr "Erweiterte Analytik"
 
 #: layer_actions##tooltips##erase
 msgid "Erase"
@@ -362,10 +363,10 @@ msgstr "Filter Nenner"
 msgid "Multi-criteria decision analysis"
 msgstr ""
 
-#: mcda##name
+#: mcda##name search##mcda_create_analysis
 #, fuzzy
-msgid "Create MCDA"
-msgstr "Erstellen"
+msgid "Create analysis"
+msgstr "Ebene erstellen"
 
 #: mcda##create_mcda_hint
 msgid "Create multi-criteria decision analysis"
@@ -409,7 +410,7 @@ msgid "Analysis name cannot be empty"
 msgstr "Passwort darf nicht leer sein!"
 
 #: mcda##error_invalid_file
-msgid "Invalid MCDA file format"
+msgid "Invalid analysis file format"
 msgstr ""
 
 #: mcda##error_invalid_parameter
@@ -421,8 +422,9 @@ msgid "Invalid '{{parameter}}' parameter in '{{axisName}}' layer"
 msgstr ""
 
 #: mcda##error_wrong_mcda_version
-msgid "Wrong MCDA version"
-msgstr ""
+#, fuzzy
+msgid "Wrong analysis version"
+msgstr "Ebene erstellen"
 
 #: mcda##legend_subtitle
 msgid ""
@@ -700,11 +702,6 @@ msgstr ""
 #: search##mcda_error_message
 msgid "AI engine did not respond. Please try again later"
 msgstr ""
-
-#: search##mcda_create_analysis
-#, fuzzy
-msgid "Create analysis"
-msgstr "Ebene erstellen"
 
 #: search##upload_analysis
 msgid "“{{name}}” Multi-Criteria Decision Analysis has been created"
@@ -1672,6 +1669,10 @@ msgstr ""
 #: oam_auth##login_button
 msgid "Login with Google"
 msgstr ""
+
+#, fuzzy
+#~ msgid "Create MCDA"
+#~ msgstr "Erstellen"
 
 #~ msgid "Save features"
 #~ msgstr "Merkmale speichern"
