--- a/src/core/localization/gettext/zh/common.po
+++ b/src/core/localization/gettext/zh/common.po
@@ -4,7 +4,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 
 #: km
 msgid "km"
@@ -382,7 +382,7 @@ msgstr "分析名称不能为空"
 #: mcda##error_invalid_file
 #, fuzzy
 msgid "Invalid analysis file format"
-msgstr "无效的 MCDA 文件格式"
+msgstr "无效的分析文件格式"
 
 #: mcda##error_invalid_parameter
 msgid "Invalid '{{parameter}}' parameter"
@@ -395,7 +395,7 @@ msgstr "图层 '{{axisName}}' 中的参数 '{{parameter}}' 无效"
 #: mcda##error_wrong_mcda_version
 #, fuzzy
 msgid "Wrong analysis version"
-msgstr "MCDA 版本错误"
+msgstr "分析版本错误"
 
 #: mcda##legend_subtitle
 msgid ""
@@ -1610,13 +1610,13 @@ msgid "Login with Google"
 msgstr "使用 Google 登录"
 
 #~ msgid "Upload MCDA"
-#~ msgstr "上传 MCDA"
+#~ msgstr "上传分析"
 
 #~ msgid "Create MCDA"
-#~ msgstr "创建 MCDA"
+#~ msgstr "创建分析"
 
 #~ msgid "Invalid MCDA layer data"
-#~ msgstr "无效的 MCDA 文件格式"
+#~ msgstr "无效的分析文件格式"
 
 #~ msgid "Base {{level}}"
 #~ msgstr "根本 {{level}}"
