--- a/src/core/localization/gettext/ru/common.po
+++ b/src/core/localization/gettext/ru/common.po
@@ -53,8 +53,7 @@ msgstr "Загрузка..."
 
 #: preparing_data
 msgid "Preparing data"
-msgstr "Сбор данных"
-
+msgstr "Подготовка данных"
 #: loading_events
 msgid "Loading disasters"
 msgstr "Загрузка катастроф"
