--- a/src/core/localization/gettext/ru/common.po
+++ b/src/core/localization/gettext/ru/common.po
@@ -92,7 +92,7 @@ msgstr "Измерить расстояние"
 
 #: toolbar##locate_me locate_me##feature_title
 msgid "Locate me"
-msgstr "Найті меня"
+msgstr "Найти меня"
 
 #: toolbar##panel_title
 msgid "Toolbar"
