feat(mva): 21234, 21319 Paint hexes grey if no color dimensions are present. Allow MVA without score dimension (#1146)
* feat: implement monochrome fill layer for MVA without score and base

* feat: allow MVA without score dimension

* remove console error for base dimension based MVAs

* feat: rework MultivariateLegend to include all present dimensions

* feat: remove MultivariateLayerEditor

* fix comments

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -177,9 +177,11 @@
     },
     "score": "Score",
     "compare": "Compare",
+    "score_and_compare": "Score and compare",
     "hide_area": "Hide area",
     "labels": "Labels",
-    "3d": "3D"
+    "3d": "3D",
+    "static_opacity": "Static opacity"
   },
   "map_popup": {
     "value": "Value",
