Add mcda legend subtitle to translations

--- a/src/core/localization/translations/en/common.json
+++ b/src/core/localization/translations/en/common.json
@@ -181,7 +181,8 @@
     "hide_area": "Hide area",
     "labels": "Labels",
     "3d": "3D",
-    "static_opacity": "Static opacity"
+    "static_opacity": "Static opacity",
+    "mcda_legend_subtitle": "Hexagons are colored as weighted average of normalized and transformed layers values"
   },
   "map_popup": {
     "value": "Value",
